--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -49,10 +49,10 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1",
+    "eslint-config-next": "15.1.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
-    "next": "^15.1.0",
+    "next": "15.1.3",
     "next-themes": "^0.4.4",
     "postcss": "8.4.30",
     "react": "19.0.0",
@@ -71,5 +71,9 @@
   },
   "devDependencies": {
     "prisma": "^6.1.0"
+  },
+  "overrides": {
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2"
   }
 }
